# Airport_Management

./: Tables.txt
backend/: .env  Cargo.toml
backend/src/: adminroutes.rs  auth.rs  authroutes.rs  bookflightroutes.rs  fetchbookings.rs  flightroutes.rs  logs.rs  main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/adminpages/: Passengers.css  adminflights.jsx  adminhomepage.jsx  adminlayout.jsx  adminlogs.jsx  adminpassengers.jsx  adminstyles.css  adminusers.jsx  logs.css
frontend/src/clientpages/: FlightBookingPage.css  FlightBookingPage.jsx  Login.jsx  ManageBooking.jsx  OnlineCheckin.jsx  PassengerDetailsPage.jsx  ProfilePage.jsx  SignUp.jsx  confirmationpage.js  home.jsx  homepage.css
frontend/src/clientpages/SignUp/: Auth.css
frontend/src/component/: Navbar.css  Navbar.js  PrivateRoutes.jsx
frontend/src/components/: dialogbox.css  dialogbox.jsx
frontend/src/routes/: adminroutes.jsx
frontend/src/store/: UseBookingStore.jsx  useAuthStore.jsx
