[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }

bcrypt = "0.17.0"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
postgres = "0.19.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3", features = ["serde"] }

sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "time", "bigdecimal", "chrono"] }

tokio = {version = "1.44.2", features = ["full"]}
argon2 = "0.5.3"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4.40", features = ["serde"] }


bigdecimal = { version = "0.4.5", features = ["serde"] }
tracing = "0.1.41"
